2008-11-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCellRenderer.t
	* xs/GtkCellRenderer.xs: Fix the stack handling in
	Gtk2::CellRenderer::get_size().  Patch by Kevin Ryde.

2008-11-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkCellRenderer.xs: Hush compiler warning.

2008-11-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkBuildable.xs: Mention in the POD that chaining up to the
	parent does not work yet for custom Gtk2::Buildable
	implementations.  Patch by Kevin Ryde.

2008-10-26  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.202.

2008-10-26  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkTreeView.t
	* xs/GtkTreeView.xs: Handle undef for callbacks correctly in
	Gtk2::TreeView::set_column_drag_function() and
	set_row_separator_func().

2008-10-26  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/version-checks.t: Don't use the -init flag as this breaks the
	test when run without DISPLAY.

2008-10-26  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkTreeView.t: For most callback tests, make sure we handle
	the case gracefully where they are not called at all.

2008-10-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.201.

2008-10-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: ExtUtils::MakeMaker 6.46 removed support for
	EXTRA_META in favor of the new META_MERGE and META_ADD.  Adapt.

2008-10-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkProperty.t: Fix some test failures reported to occur on
	sun4-solaris.

2008-10-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkEditable.t
	* t/GtkSpinButton.t: Don't use adjustments with a non-zero page
	size for spin buttons to hush the warnings gtk+ recently started
	issuing.

	* t/01.GtkWindow.t
	* t/02.GtkContainer.t
	* t/GdkScreen.t
	* t/GdkWindow.t
	* t/GtkAccelGroup.t
	* t/GtkBuilder.t
	* t/GtkCalendar.t
	* t/GtkClipboard.t
	* t/GtkEntry.t
	* t/GtkFontSelection.t